2017-08-30  Richard Biener  <rguenther@suse.de>

	* dwarf2out.c (add_dwarf_attr): Check we don't add duplicate
	attributes.
	(gen_subprogram_die): Add DW_AT_object_pointer only early.
	(dwarf2out_early_global_decl): Only generate a DIE for the
	abstract origin if it doesn't already exist or is a declaration DIE.
	(resolve_addr): Do not add the linkage name twice when
	generating a stub DIE for the DW_TAG_GNU_call_site target.

2017-08-30  Richard Sandiford  <richard.sandiford@linaro.org>

	* config/rs6000/rs6000-c.c (altivec_resolve_overloaded_builtin):
	Use machine_mode rather than int for arg1_mode.

2017-08-29  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/82015
	* config/rs6000/rs6000.c (rs6000_expand_binop_builtin): Insure
	that the second argument of the built-in functions to unpack
	128-bit scalar types to 64-bit values is 0 or 1.  Change to use a
	switch statement instead a lot of if statements.
	* config/rs6000/rs6000.md (unpack<mode>, FMOVE128_VSX iterator):
	Allow 64-bit values to be in Altivec registers as well as
	traditional floating point registers.
	(pack<mode>, FMOVE128_VSX iterator): Likewise.

2017-08-29  Alexander Monakov  <amonakov@ispras.ru>

	* ira-costs.c (record_address_regs): Handle both operands of PLUS for
	MAX_REGS_PER_ADDRESS == 1.

2017-08-29  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.opt (flag_fentry): Do not init to -1.
	* config/i386/i386.c (ix86_option_override_internal): Simplify
	setting of opts->x_flag_entry.

2017-08-29  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
	    Jakub Jelinek  <jakub@redhat.com>
	    Richard Biener  <rguenther@suse.de>

	PR tree-optimization/81503
	* gimple-ssa-strength-reduction.c (replace_mult_candidate): Ensure
	folded constant fits in the target type; reorder tests for clarity.

2017-08-29  Martin Liska  <mliska@suse.cz>

	* passes.def: Include pass_lower_switch.
	* stmt.c (dump_case_nodes): Remove and move to
	tree-switch-conversion.
	(case_values_threshold): Likewise.